--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     restart: unless-stopped
     container_name: fpm
     volumes:
-      - ./openspf:/var/www/html
+      - ../openspf:/var/www/html
   nginx:
     image: nginx:1.17-alpine
     container_name: server
@@ -20,4 +20,4 @@ services:
       - 443:443
     volumes:
       - ./nginx/site.conf:/etc/nginx/conf.d/site.conf
-      - ./openspf:/var/www/html
+      - ../openspf:/var/www/html
