--- a/nginx/site.conf
+++ b/nginx/site.conf
@@ -18,7 +18,7 @@ server {
     }
 
     location / {
-        try_files $uri $uri/ index.php?$query_string; 
+        try_files $uri $uri/ /index.php?$query_string; 
         gzip_static on;
     }
 }
