--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:7.3-fpm-alpine3.9
 
-RUN group -g 82 -S docker-www-data; \
-    adduser -u 82 -D -S -G docker-www-data docker-www-data
+RUN addgroup -g 2048 -S docker-www-data; \
+    adduser -u 2048 -D -S -G docker-www-data docker-www-data
 
 USER docker-www-data
 
