upgrade Docker file for latest php version

--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.3-fpm-alpine3.9
+FROM php:fpm-alpine
 
 RUN addgroup -g 2048 -S docker-www-data; \
     adduser -u 2048 -D -S -G docker-www-data docker-www-data
