--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,13 +1,5 @@
-FROM node:10.9-slim
+FROM node:latest
 
-RUN apt-get -y update \
-	&& apt-get install -y git
-
-RUN yarn global add @vue/cli -g
-
-RUN apt-get autoremove -y \
-    && apt-get autoclean -y \
-    && apt-get clean -y \
-    && rm -rf /var/lib/apt/lists/*
+RUN npm install -g @vue/cli
 
 CMD ["node"]
