Added node container for vue app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,18 @@ services:
       - ./nginx/site.conf:/etc/nginx/conf.d/site.conf
       - ${SOURCE_FOLDER}:/var/www/html
   node:
-    image: node:latest
-    #    build:
-    #      context: .
-    #      dockerfile: ./node/Dockerfile
     container_name: node
+    build:
+      context: ./node
+      dockerfile: Dockerfile
+      args:
+        - LOCATION=/home/node/vue-app
+    ports:
+      - "8081:8080"
+      - "8000:8000"
+    tty: true
+    stdin_open: true
+    volumes:
+      - ../vue-app:/home/node/vue-app
+    environment:
+      - NODE_ENV=development
