Added git to container

--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,5 +1,9 @@
 FROM node:alpine
 
+RUN apk --update add git && \
+    rm -rf /var/lib/apt/lists/* && \
+    rm /var/cache/apk/*
+
 RUN yarn global add @vue/cli
 
 WORKDIR /home/node/vue-app
