--- a/nginx/site.conf
+++ b/nginx/site.conf
@@ -9,7 +9,7 @@ server {
         try_files $uri =404;
 
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass fpm:9000;
+        fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
 
         include fastcgi_params;
@@ -18,7 +18,7 @@ server {
     }
 
     location / {
-        try_files $uri $uri/ /index.php?$query_string; 
+        try_files $uri $uri/ /index.php?$query_string;
         gzip_static on;
     }
 }
