--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:fpm-alpine
+FROM php:8.0-fpm-alpine
 
 RUN apk add --no-cache --update --virtual buildDeps \
     autoconf \
@@ -6,19 +6,24 @@ RUN apk add --no-cache --update --virtual buildDeps \
     gcc \
     make \
     g++ \
-    zlib-dev
+    zlib-dev \
+
 RUN pecl install redis
 RUN docker-php-ext-enable redis
 COPY redis.ini /usr/local/etc/php/conf.d/redis.ini
-RUN pecl install xdebug
-RUN docker-php-ext-enable xdebug
+
+ARG XDEBUG_ON
 COPY xdebug.ini /usr/local/etc/php/conf.d/xdebug.ini
+RUN if [ $XDEBUG_ON -eq 1 ]; then \
+ pecl install xdebug \
+ docker-php-ext-enable xdebug; \
+ fi
+
 RUN apk del buildDeps
 
 RUN addgroup -g 1000 -S docker-www-data; \
     adduser -u 1000 -D -S -G docker-www-data docker-www-data
-
 USER docker-www-data
 
-EXPOSE 9000
+EXPOSE 9003
 CMD ["php-fpm"]
