--- a/nginx/dev.fpm.conf
+++ b/nginx/dev.fpm.conf
@@ -1,7 +1,5 @@
 user  nginx;
 worker_processes  1;
-error_log  /var/log/nginx/error.log warn;
-access_log /var/log/nginx/access.log;
 pid        /var/run/nginx.pid;
 events {
   worker_connections  1024;
@@ -14,14 +12,16 @@ http {
   log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
-  access_log  /var/log/nginx/access.log  main;
+
+  error_log  /var/log/nginx/error.log warn;
+  access_log /var/log/nginx/access.log;
 
   sendfile        on;
   keepalive_timeout  65;
 
   server {
       index index.php;
-      server_name localhost;
+      server_name 172.17.0.1;
       root /var/www/html/public;
 
       location ~ \.php$ {
