--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,9 @@ services:
     volumes:
       - .:/var/www/html
   php-cli:
-    container_name: php-cli
+    container_name: cli
     build:
-      context: php-cli
+      context: cli
     volumes:
       - .:/var/www/html
   nginx:
@@ -49,7 +49,3 @@ services:
       test: [ "CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}" ]
       retries: 3
       timeout: 5s
-  node-cli:
-    container_name: node-cli
-    build:
-      context: node-cli
